New QR-CODE updates

--- a/static/i18n/az.json
+++ b/static/i18n/az.json
@@ -3,8 +3,18 @@
     "metaDescriptionContent": "YouTube, YouTube Music, SoundCloud və digər saytlardan videolar/treklər və pleylistlərdən musiqi və video faylları MP3, M4A, Opus və ya MP4 formatlarında asanlıqla yükləyin. thebitsamurai tərəfindən yaradılıb.",
     "navInfoButton": "Məlumat",
     "navCopyrightButton": "Müəllif Hüquqları",
+    "navShareButton": "Paylaş",
     "navUpdatesButton": "Yenilikler (Bloq)",
     "navGithubButton": "GitHub",
+    "shareTitle": "Music Jacker-i Paylaş",
+    "shareDescription": "QR kodu skan edin və ya aşağıdakı düymə ilə Music Jacker-i başqa cihazda açın.",
+    "shareCta": "Paylaş",
+    "shareNativeHint": "Əgər sistem paylaşımı mövcud deyilsə, linki sizin üçün kopyalayacağıq.",
+    "shareNativeTitle": "Music Jacker",
+    "shareNativeText": "YouTube, YouTube Music və ya SoundCloud-dan musiqi və videonu yükləyin.",
+    "shareClipboardFallback": "Keçid yaddaşa kopyalandı. Dostlarınızla bölüşün!",
+    "shareUnsupported": "Bu brauzerdə paylaşma dəstəklənmir.",
+    "shareFailed": "Paylaşma pəncərəsi açıla bilmədi. Yenidən cəhd edin.",
     "infoTitle": "Bu Sayt Haqqında",
     "infoHowItWorksTitle": "Bu Sayt Necə İşləyir",
     "infoHowItWorksPara1": "Bu veb tətbiqi YouTube, YouTube Music, SoundCloud və ya digər saytlardan videolar/treklər və ya pleylistlərdən audio/video yükləməyə imkan verir. Siz sadəcə URL-ni daxil edir, istədiyiniz formatı (MP3, M4A, Opus və ya MP4) seçirsiniz və server tərəfi skripti sorğunu emal edir.",
