--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -3,8 +3,18 @@
     "metaDescriptionContent": "Easily download music and video from YouTube, YouTube Music, SoundCloud and other videos/tracks and playlists in MP3, M4A, Opus or MP4 formats. Created by thebitsamurai.",
     "navInfoButton": "Info",
     "navCopyrightButton": "Copyright",
+    "navShareButton": "Share",
     "navUpdatesButton": "Updates (Blog)",
     "navGithubButton": "GitHub",
+    "shareTitle": "Share Music Jacker",
+    "shareDescription": "Scan the QR code or use the button below to open Music Jacker on another device.",
+    "shareCta": "Share",
+    "shareNativeHint": "If native sharing is unavailable, we will copy the link for you.",
+    "shareNativeTitle": "Music Jacker",
+    "shareNativeText": "Download music and video from YouTube, YouTube Music or SoundCloud.",
+    "shareClipboardFallback": "Link copied to clipboard. Share it with your friends!",
+    "shareUnsupported": "Sharing is not supported in this browser.",
+    "shareFailed": "Could not open the share dialog. Please try again.",
     "infoTitle": "About This Site",
     "infoHowItWorksTitle": "How This Site Works",
     "infoHowItWorksPara1": "This web application allows you to download audio/video from YouTube, YouTube Music, SoundCloud or other videos/tracks or playlists. You simply paste the URL, choose your desired format (MP3, M4A, Opus or MP4), and the server-side script processes your request.",
