--- a/static/i18n/es.json
+++ b/static/i18n/es.json
@@ -3,8 +3,18 @@
     "metaDescriptionContent": "Descarga fácilmente música y video de videos/pistas y listas de reproducción de YouTube, YouTube Music, SoundCloud y otros sitios en formatos MP3, M4A, Opus o MP4. Creado por thebitsamurai.",
     "navInfoButton": "Info",
     "navCopyrightButton": "Copyright",
+    "navShareButton": "Compartir",
     "navUpdatesButton": "Actualizaciones (Blog)",
     "navGithubButton": "GitHub",
+    "shareTitle": "Compartir Music Jacker",
+    "shareDescription": "Escanea el código QR o usa el botón de abajo para abrir Music Jacker en otro dispositivo.",
+    "shareCta": "Compartir",
+    "shareNativeHint": "Si la opción nativa para compartir no está disponible, copiaremos el enlace por ti.",
+    "shareNativeTitle": "Music Jacker",
+    "shareNativeText": "Descarga música y video de YouTube, YouTube Music o SoundCloud.",
+    "shareClipboardFallback": "Enlace copiado al portapapeles. ¡Compártelo con tus amigos!",
+    "shareUnsupported": "Compartir no es compatible en este navegador.",
+    "shareFailed": "No se pudo abrir la hoja para compartir. Inténtalo de nuevo.",
     "infoTitle": "Sobre este Sitio",
     "infoHowItWorksTitle": "Cómo Funciona Este Sitio",
     "infoHowItWorksPara1": "Esta aplicación web te permite descargar audio/video de videos/pistas o listas de reproducción de YouTube, YouTube Music, SoundCloud u otros sitios. Simplemente pegas la URL, eliges tu formato deseado (MP3, M4A, Opus o MP4), y el script del lado del servidor procesa tu solicitud.",
