--- a/static/i18n/ru.json
+++ b/static/i18n/ru.json
@@ -3,8 +3,18 @@
     "metaDescriptionContent": "Легко скачивайте музыку и видео из видео/треков и плейлистов YouTube, YouTube Music, SoundCloud и других сайтов в форматах MP3, M4A, Opus или MP4. Создано thebitsamurai.",
     "navInfoButton": "Инфо",
     "navCopyrightButton": "Авторское право",
+    "navShareButton": "Поделиться",
     "navUpdatesButton": "Обновления (Блог)",
     "navGithubButton": "GitHub",
+    "shareTitle": "Поделиться Music Jacker",
+    "shareDescription": "Отсканируйте QR-код или нажмите кнопку ниже, чтобы открыть Music Jacker на другом устройстве.",
+    "shareCta": "Поделиться",
+    "shareNativeHint": "Если системный экран «Поделиться» недоступен, мы скопируем ссылку.",
+    "shareNativeTitle": "Music Jacker",
+    "shareNativeText": "Скачивайте музыку и видео с YouTube, YouTube Music или SoundCloud.",
+    "shareClipboardFallback": "Ссылка скопирована. Можно отправить друзьям!",
+    "shareUnsupported": "Поделиться не поддерживается в этом браузере.",
+    "shareFailed": "Не удалось открыть меню «Поделиться». Попробуйте снова.",
     "infoTitle": "Об этом сайте",
     "infoHowItWorksTitle": "Как работает этот сайт",
     "infoHowItWorksPara1": "Это веб-приложение позволяет загружать аудио/видео из видео/треков или плейлистов YouTube, YouTube Music, SoundCloud или других сайтов. Вы просто вставляете URL-адрес, выбираете желаемый формат (MP3, M4A, Opus или MP4), и серверный скрипт обрабатывает ваш запрос.",
