--- a/static/i18n/tr.json
+++ b/static/i18n/tr.json
@@ -3,8 +3,18 @@
     "metaDescriptionContent": "YouTube, YouTube Music, SoundCloud ve diğer sitelerden videolar/şarkılar ve çalma listelerinden MP3, M4A, Opus veya MP4 formatında kolayca müzik ve video indirin. thebitsamurai tarafından oluşturuldu.",
     "navInfoButton": "Bilgi",
     "navCopyrightButton": "Telif Hakkı",
+    "navShareButton": "Paylaş",
     "navUpdatesButton": "Güncellemeler (Blog)",
     "navGithubButton": "GitHub",
+    "shareTitle": "Music Jacker'ı Paylaş",
+    "shareDescription": "QR kodunu tara veya aşağıdaki düğmeyle Music Jacker'ı başka bir cihazda aç.",
+    "shareCta": "Paylaş",
+    "shareNativeHint": "Yerleşik paylaşım yoksa bağlantıyı sizin için kopyalayacağız.",
+    "shareNativeTitle": "Music Jacker",
+    "shareNativeText": "YouTube, YouTube Music veya SoundCloud'dan müzik ve video indir.",
+    "shareClipboardFallback": "Bağlantı panoya kopyalandı. Arkadaşlarınla paylaş!",
+    "shareUnsupported": "Bu tarayıcıda paylaşım desteklenmiyor.",
+    "shareFailed": "Paylaşım ekranı açılamadı. Tekrar dene.",
     "infoTitle": "Bu Site Hakkında",
     "infoHowItWorksTitle": "Bu Site Nasıl Çalışır?",
     "infoHowItWorksPara1": "Bu web uygulaması, YouTube, YouTube Music, SoundCloud veya diğer sitelerden videolar/şarkılar veya oynatma listelerinden ses/video indirmenizi sağlar. URL'yi yapıştırır, istediğiniz formatı (MP3, M4A, Opus veya MP4) seçersiniz ve sunucu tarafı betiği isteğinizi işler.",
