feat: Add converter functionality, new standalone templates, and i18n support.

--- a/static/i18n/az.json
+++ b/static/i18n/az.json
@@ -6,6 +6,7 @@
     "navShareButton": "Paylaş",
     "navUpdatesButton": "Yenilikler (Bloq)",
     "navGithubButton": "GitHub",
+    "navConverterButton": "Çevirici",
     "shareTitle": "Music Jacker-i Paylaş",
     "shareDescription": "QR kodu skan edin və ya aşağıdakı düymə ilə Music Jacker-i başqa cihazda açın.",
     "shareCta": "Paylaş",
@@ -67,4 +68,41 @@
     "durationLimitInfo": "Qeyd: 10 dəqiqədən uzun məzmun yüklənə bilməz.",
     "durationLimitError": "10 dəqiqədən uzun məzmun yüklənə bilməz.",
     "playlistDurationLimitError": "Pleylistdə 10 dəqiqədən uzun məzmun var, bu yüklənə bilməz."
+
+    ,"converterPageTitle": "Çevirici — Music Jacker",
+    "converterH1": "Fayl Çeviricisi",
+    "converterUploadLabel": "Faylı seçin (audio/video üçün maksimum 5 dəqiqə):",
+    "converterTargetLabel": "Çevirmək:",
+    "converterSubmitButton": "Çevir",
+    "converterMaxDurationWarning": "Yüklənən audio/video 5 dəqiqə (300 saniyə) və ya daha az olmalıdır.",
+    "converterProgressLabel": "Çevirilmə irəliləyişi",
+    "converterResultReady": "Çevirilmə tamamlandı — yükləmək üçün klikləyin",
+    "converterChooseFile": "Fayl seç",
+    "converterSupportedFormats": "Dəstəklənən çevirilər: mp3 → m4a, webp → jpg, mp4 → mp3"
+    ,"navMusicJackerButton": "Music Jacker",
+    "converterFileName": "Fayl adı:",
+    "converterFileSize": "Həcmi:",
+    "converterFileType": "Növü:",
+    "converterSelectInfo": "Fayl seçin, sonra hədəf format seçib Çevir düyməsinə basın",
+    "converterValidationUnsupported": "Dəstəklənməyən giriş/hədəf format kombinasiyası.",
+    "converterValidationDuration": "Fayl 5 dəqiqə (300s) və ya daha az olmalıdır.",
+    "converterValidationNoFile": "Çevirilməzdən əvvəl fayl seçin.",
+    "converterErrorFFmpegMissing": "Server tərəfində çevirilmə mövcud deyil (FFmpeg yoxdur).",
+    "converterErrorConversionFailed": "Serverdə çevirilmə uğursuz oldu.",
+    "converterProgressPercent": "{PERCENT}%",
+    "converterStatusQueued": "Növbədə",
+    "converterStatusProcessing": "Emal olunur",
+    "converterStatusDone": "Bitdi",
+    "converterErrorUnsupported": "İstənilən çevirilmə dəstəklənmir.",
+    "converterErrorTooLong": "Yüklənən fayl 5 dəqiqə limitini keçir.",
+    "converterCancelButton": "Ləğv et",
+    "converterClearButton": "Təmizlə",
+    "converterAddFormatPlaceholder": "Daha çox formatlar tezliklə əlavə ediləcək..."
+    ,"converterFmt_m4a":"M4A (Apple AAC)",
+    "converterFmt_mp3":"MP3 (yüksək uyğunluq)",
+    "converterFmt_wav":"WAV (zərərsiz)",
+    "converterFmt_flac":"FLAC (zərərsiz)",
+    "converterFmt_jpg":"JPG (itirilmiş keyfiyyət)",
+    "converterFmt_png":"PNG (itkisiz)",
+    "converterFmt_gif":"GIF (animasiya üçün uyğun)"
 }
