--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -6,6 +6,7 @@
     "navShareButton": "Share",
     "navUpdatesButton": "Updates (Blog)",
     "navGithubButton": "GitHub",
+    "navConverterButton": "Converter",
     "shareTitle": "Share Music Jacker",
     "shareDescription": "Scan the QR code or use the button below to open Music Jacker on another device.",
     "shareCta": "Share",
@@ -67,4 +68,41 @@
     "durationLimitInfo": "Note: Content longer than 10 minutes cannot be downloaded.",
     "durationLimitError": "Content longer than 10 minutes cannot be downloaded.",
     "playlistDurationLimitError": "Playlist contains content longer than 10 minutes, which cannot be downloaded."
+
+    ,"converterPageTitle": "Converter — Music Jacker",
+    "converterH1": "File Converter",
+    "converterUploadLabel": "Choose file (max 5 minutes for audio/video):",
+    "converterTargetLabel": "Convert to:",
+    "converterSubmitButton": "Convert",
+    "converterMaxDurationWarning": "Uploaded audio/video must be 5 minutes (300 seconds) or less.",
+    "converterProgressLabel": "Conversion progress",
+    "converterResultReady": "Conversion complete — click to download",
+    "converterChooseFile": "Choose file",
+    "converterSupportedFormats": "Supported conversions: mp3 → m4a, webp → jpg, mp4 → mp3",
+    "navMusicJackerButton": "Music Jacker",
+    "converterFileName": "File name:",
+    "converterFileSize": "Size:",
+    "converterFileType": "Type:",
+    "converterSelectInfo": "Select a file, then choose a target format and click Convert",
+    "converterValidationUnsupported": "Unsupported input/target format combination.",
+    "converterValidationDuration": "File must be 5 minutes (300s) or less.",
+    "converterValidationNoFile": "Please choose a file before converting.",
+    "converterErrorFFmpegMissing": "Server-side conversion not available (FFmpeg missing).",
+    "converterErrorConversionFailed": "Conversion failed on server.",
+    "converterProgressPercent": "{PERCENT}%",
+    "converterStatusQueued": "Queued",
+    "converterStatusProcessing": "Processing",
+    "converterStatusDone": "Done",
+    "converterErrorUnsupported": "Requested conversion is not supported.",
+    "converterErrorTooLong": "Uploaded file exceeds 5 minute limit.",
+    "converterCancelButton": "Cancel",
+    "converterClearButton": "Clear",
+    "converterAddFormatPlaceholder": "More formats coming soon..."
+    ,"converterFmt_m4a":"M4A (Apple AAC)",
+    "converterFmt_mp3":"MP3 (high compatibility)",
+    "converterFmt_wav":"WAV (lossless-ish)",
+    "converterFmt_flac":"FLAC (lossless)",
+    "converterFmt_jpg":"JPG (lossy image)",
+    "converterFmt_png":"PNG (lossless image)",
+    "converterFmt_gif":"GIF (animated-friendly)"
 }
