--- a/static/i18n/es.json
+++ b/static/i18n/es.json
@@ -6,6 +6,7 @@
     "navShareButton": "Compartir",
     "navUpdatesButton": "Actualizaciones (Blog)",
     "navGithubButton": "GitHub",
+    "navConverterButton": "Convertidor",
     "shareTitle": "Compartir Music Jacker",
     "shareDescription": "Escanea el código QR o usa el botón de abajo para abrir Music Jacker en otro dispositivo.",
     "shareCta": "Compartir",
@@ -66,4 +67,41 @@
     "fileStatusStarted": "¡Iniciado! Revisa el navegador.",
     "durationLimitInfo": "Nota: El contenido de más de 10 minutos no se puede descargar.",
     "playlistDurationLimitError": "La lista de reproducción contiene contenido de más de 10 minutos, que no se puede descargar."
+
+    ,"converterPageTitle": "Convertidor — Music Jacker",
+    "converterH1": "Convertidor de Archivos",
+    "converterUploadLabel": "Selecciona archivo (máx. 5 minutos para audio/video):",
+    "converterTargetLabel": "Convertir a:",
+    "converterSubmitButton": "Convertir",
+    "converterMaxDurationWarning": "El audio/video subido debe tener 5 minutos (300 segundos) o menos.",
+    "converterProgressLabel": "Progreso de conversión",
+    "converterResultReady": "Conversión completa — haz clic para descargar",
+    "converterChooseFile": "Seleccionar archivo",
+        "converterSupportedFormats": "Conversiones soportadas: mp3 → m4a, webp → jpg, mp4 → mp3",
+        "navMusicJackerButton": "Music Jacker",
+        "converterFileName": "Nombre de archivo:",
+        "converterFileSize": "Tamaño:",
+        "converterFileType": "Tipo:",
+        "converterSelectInfo": "Selecciona un archivo, elige un formato de destino y haz clic en Convertir",
+        "converterValidationUnsupported": "Combinación de formatos no compatible.",
+        "converterValidationDuration": "El archivo debe tener 5 minutos (300 s) o menos.",
+        "converterValidationNoFile": "Por favor selecciona un archivo antes de convertir.",
+        "converterErrorFFmpegMissing": "La conversión en servidor no está disponible (FFmpeg ausente).",
+        "converterErrorConversionFailed": "La conversión falló en el servidor.",
+        "converterProgressPercent": "{PERCENT}%",
+        "converterStatusQueued": "En cola",
+        "converterStatusProcessing": "Procesando",
+        "converterStatusDone": "Hecho",
+        "converterErrorUnsupported": "La conversión solicitada no es compatible.",
+        "converterErrorTooLong": "El archivo subido supera el límite de 5 minutos.",
+        "converterCancelButton": "Cancelar",
+        "converterClearButton": "Limpiar",
+        "converterAddFormatPlaceholder": "Más formatos próximamente..."
+        ,"converterFmt_m4a":"M4A (Apple AAC)",
+        "converterFmt_mp3":"MP3 (alta compatibilidad)",
+        "converterFmt_wav":"WAV (sin pérdida)",
+        "converterFmt_flac":"FLAC (sin pérdida)",
+        "converterFmt_jpg":"JPG (imagen con pérdida)",
+        "converterFmt_png":"PNG (imagen sin pérdida)",
+        "converterFmt_gif":"GIF (ideal para animaciones)"
 }
