--- a/static/i18n/ru.json
+++ b/static/i18n/ru.json
@@ -6,6 +6,7 @@
     "navShareButton": "Поделиться",
     "navUpdatesButton": "Обновления (Блог)",
     "navGithubButton": "GitHub",
+    "navConverterButton": "Конвертер",
     "shareTitle": "Поделиться Music Jacker",
     "shareDescription": "Отсканируйте QR-код или нажмите кнопку ниже, чтобы открыть Music Jacker на другом устройстве.",
     "shareCta": "Поделиться",
@@ -67,4 +68,41 @@
     "durationLimitInfo": "Примечание: Контент длиннее 10 минут не может быть скачан.",
     "durationLimitError": "Контент длиннее 10 минут не может быть скачан.",
     "playlistDurationLimitError": "Плейлист содержит контент длиннее 10 минут, который не может быть скачан."
+
+    ,"converterPageTitle": "Конвертер — Загрузчик",
+    "converterH1": "Файл-конвертер",
+    "converterUploadLabel": "Выберите файл (максимум 5 минут для аудио/видео):",
+    "converterTargetLabel": "Конвертировать в:",
+    "converterSubmitButton": "Конвертировать",
+    "converterMaxDurationWarning": "Загруженное аудио/видео должно быть не длиннее 5 минут (300 секунд).",
+    "converterProgressLabel": "Прогресс конвертации",
+    "converterResultReady": "Конвертация завершена — нажмите для загрузки",
+    "converterChooseFile": "Выбрать файл",
+    "converterSupportedFormats": "Поддерживаемые конверсии: mp3 → m4a, webp → jpg, mp4 → mp3"
+    ,"navMusicJackerButton": "Music Jacker",
+    "converterFileName": "Имя файла:",
+    "converterFileSize": "Размер:",
+    "converterFileType": "Тип:",
+    "converterSelectInfo": "Выберите файл, затем выберите целевой формат и нажмите Конвертировать",
+    "converterValidationUnsupported": "Неподдерживаемая комбинация входного и целевого форматов.",
+    "converterValidationDuration": "Файл должен быть не длиннее 5 минут (300 с).",
+    "converterValidationNoFile": "Пожалуйста, выберите файл перед конвертацией.",
+    "converterErrorFFmpegMissing": "Сервер не поддерживает конвертацию (FFmpeg не доступен).",
+    "converterErrorConversionFailed": "Ошибка конвертации на сервере.",
+    "converterProgressPercent": "{PERCENT}%",
+    "converterStatusQueued": "В очереди",
+    "converterStatusProcessing": "Обработка",
+    "converterStatusDone": "Готово",
+    "converterErrorUnsupported": "Запрошенная конверсия не поддерживается.",
+    "converterErrorTooLong": "Загруженный файл превышает 5-минутный лимит.",
+    "converterCancelButton": "Отменить",
+    "converterClearButton": "Очистить",
+    "converterAddFormatPlaceholder": "Скоро будут добавлены новые форматы..."
+    ,"converterFmt_m4a":"M4A (Apple AAC)",
+    "converterFmt_mp3":"MP3 (высокая совместимость)",
+    "converterFmt_wav":"WAV (без потерь)",
+    "converterFmt_flac":"FLAC (без потерь)",
+    "converterFmt_jpg":"JPG (сжатое изображение)",
+    "converterFmt_png":"PNG (без потерь)",
+    "converterFmt_gif":"GIF (поддержка анимации)"
 }
