--- a/static/i18n/tr.json
+++ b/static/i18n/tr.json
@@ -6,6 +6,7 @@
     "navShareButton": "Paylaş",
     "navUpdatesButton": "Güncellemeler (Blog)",
     "navGithubButton": "GitHub",
+    "navConverterButton": "Dönüştürücü",
     "shareTitle": "Music Jacker'ı Paylaş",
     "shareDescription": "QR kodunu tara veya aşağıdaki düğmeyle Music Jacker'ı başka bir cihazda aç.",
     "shareCta": "Paylaş",
@@ -61,4 +62,41 @@
     "durationLimitInfo": "Not: 10 dakikadan uzun içerik indirilemez.",
     "durationLimitError": "10 dakikadan uzun içerik indirilemez.",
     "playlistDurationLimitError": "Çalma listesi 10 dakikadan uzun içerik barındırıyor, indirilemez."
+
+    ,"converterPageTitle": "Dönüştürücü — Music Jacker",
+    "converterH1": "Dosya Dönüştürücü",
+    "converterUploadLabel": "Dosya seçin (ses/video için en fazla 5 dakika):",
+    "converterTargetLabel": "Dönüştür:",
+    "converterSubmitButton": "Dönüştür",
+    "converterMaxDurationWarning": "Yüklenen ses/video 5 dakika (300 saniye) veya daha kısa olmalıdır.",
+    "converterProgressLabel": "Dönüştürme ilerlemesi",
+    "converterResultReady": "Dönüştürme tamamlandı — indirmek için tıklayın",
+    "converterChooseFile": "Dosya seç",
+    "converterSupportedFormats": "Desteklenen dönüşümler: mp3 → m4a, webp → jpg, mp4 → mp3"
+    ,"navMusicJackerButton": "Music Jacker",
+    "converterFileName": "Dosya adı:",
+    "converterFileSize": "Boyut:",
+    "converterFileType": "Tür:",
+    "converterSelectInfo": "Bir dosya seçin, hedef formatı seçin ve Dönüştür'e tıklayın",
+    "converterValidationUnsupported": "Desteklenmeyen giriş/hedef format kombinasyonu.",
+    "converterValidationDuration": "Dosya 5 dakika (300s) veya daha kısa olmalıdır.",
+    "converterValidationNoFile": "Dönüştürmeden önce lütfen bir dosya seçin.",
+    "converterErrorFFmpegMissing": "Sunucu tarafı dönüşümü mevcut değil (FFmpeg eksik).",
+    "converterErrorConversionFailed": "Sunucuda dönüşüm başarısız oldu.",
+    "converterProgressPercent": "{PERCENT}%",
+    "converterStatusQueued": "Sırada",
+    "converterStatusProcessing": "İşleniyor",
+    "converterStatusDone": "Tamamlandı",
+    "converterErrorUnsupported": "İstenen dönüşüm desteklenmiyor.",
+    "converterErrorTooLong": "Yüklenen dosya 5 dakikalık sınırı aşıyor.",
+    "converterCancelButton": "İptal",
+    "converterClearButton": "Temizle",
+    "converterAddFormatPlaceholder": "Yakında daha fazla format eklenecek..."
+    ,"converterFmt_m4a":"M4A (Apple AAC)",
+    "converterFmt_mp3":"MP3 (yüksek uyumluluk)",
+    "converterFmt_wav":"WAV (kayıpsız)",
+    "converterFmt_flac":"FLAC (kayıpsız)",
+    "converterFmt_jpg":"JPG (kayıplı görüntü)",
+    "converterFmt_png":"PNG (kayıpsız görüntü)",
+    "converterFmt_gif":"GIF (animasyonlar için uygun)"
 }
